--- a/src/QueueT/QueueT.csproj
+++ b/src/QueueT/QueueT.csproj
@@ -1,8 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PackageId>QueueT</PackageId>
+    <Title>Queue&lt;T&gt;</Title>
+    <Description>C# Distributed Task Library for .Net Standard </Description>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <Authors>Jeremy Tillman</Authors>
+    <RepositoryUrl>https://github.com/jtillman/queuet</RepositoryUrl>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.0-beta1</Version>
+    <SignAssembly>true</SignAssembly>
+    <DelaySign>true</DelaySign>
+    <AssemblyOriginatorKeyFile>key.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
