Use snk instead of pfx for assembly signing

--- a/src/QueueT/QueueT.csproj
+++ b/src/QueueT/QueueT.csproj
@@ -13,7 +13,7 @@
     <Version>1.0.0-beta1</Version>
     <SignAssembly>true</SignAssembly>
     <DelaySign>true</DelaySign>
-    <AssemblyOriginatorKeyFile>key.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
